--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,35 +1,68 @@
 name: openra
-version: '20170527'
-summary: A Libre/Free Real Time Strategy game engine supporting early Westwood classics
+version: '20171014'
+summary: Libre/Free Real Time Strategy game engine supporting early Westwood classics
 description: |
   Open Source real-time strategy game engine for early Westwood games
   such as Command & Conquer: Red Alert written in C# using SDL and
   OpenGL. Runs on Windows, Linux, *BSD and Mac OS X.
 icon: icons/openra-ra.svg
+
+grade: stable
 confinement: strict
 
+environment:
+  MONO_CFG_DIR: $SNAP/etc
+  MONO_CONFIG: $SNAP/etc/mono/config
+  MONO_GAC_PREFIX: $SNAP/usr/lib/mono
+
 apps:
-  openra:
-    command: desktop-launch $SNAP/usr/bin/mono-sgen $SNAP/usr/local/lib/openra/OpenRA.Game.exe
-    environment:
-      MONO_CFG_DIR: $SNAP/etc
-      MONO_CONFIG: $SNAP/etc/mono/config
-      MONO_GAC_PREFIX: $SNAP/usr/lib/mono
+  cnc:
+    command: desktop-launch $SNAP/usr/bin/mono-sgen $SNAP/usr/local/lib/openra/OpenRA.Game.exe Game.Mod=cnc
+    desktop: usr/local/share/applications/openra-cnc.desktop
     plugs:
+      - desktop
       - mount-observe
       - network
       - network-bind
       - opengl
-      - optical-drive
       - pulseaudio
-      - unity7
+      - removable-media
+      - wayland
+      - x11
+  d2k:
+    command: desktop-launch $SNAP/usr/bin/mono-sgen $SNAP/usr/local/lib/openra/OpenRA.Game.exe Game.Mod=d2k
+    desktop: usr/local/share/applications/openra-d2k.desktop
+    plugs:
+      - desktop
+      - mount-observe
+      - network
+      - network-bind
+      - opengl
+      - pulseaudio
+      - removable-media
+      - wayland
+      - x11
+  ra:
+    command: desktop-launch $SNAP/usr/bin/mono-sgen $SNAP/usr/local/lib/openra/OpenRA.Game.exe Game.Mod=ra
+    desktop: usr/local/share/applications/openra-ra.desktop
+    plugs:
+      - desktop
+      - mount-observe
+      - network
+      - network-bind
+      - opengl
+      - pulseaudio
+      - removable-media
+      - wayland
       - x11
 
 parts:
   openra:
     plugin: make
-    source: https://github.com/OpenRA/OpenRA/archive/release-20170527.tar.gz
+    source: https://github.com/OpenRA/OpenRA/archive/release-20171014.tar.gz
     prepare: |
+      sed -i 's|^Icon=\(.*\)$|Icon=${SNAP}/usr/local/share/icons/hicolor/128x128/apps/\1.png|' packaging/linux/openra.desktop.in
+      sed -i 's|^Exec=|Exec=openra.{MOD}|' packaging/linux/openra.desktop.in
       make dependencies
     install: |
       make DESTDIR=$SNAPCRAFT_PART_INSTALL install
@@ -50,3 +83,4 @@ parts:
       - libopenal1
       - libsdl2-2.0-0
       - mono-complete
+      - mount
