--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -16,21 +16,21 @@ environment:
   MONO_GAC_PREFIX: $SNAP/usr/lib/mono
 
 apps:
-  openra:
-    command: desktop-launch $SNAP/usr/bin/mono-sgen $SNAP/usr/local/lib/openra/OpenRA.Game.exe
-    plugs:
-    - desktop
-    - mount-observe
-    - network
-    - network-bind
-    - opengl
-    - pulseaudio
-    - removable-media
-    - wayland
-    - x11
+  # openra:
+  #   command: desktop-launch $SNAP/usr/bin/mono-sgen $SNAP/usr/local/lib/openra/OpenRA.Game.exe
+  #   plugs:
+  #   - desktop
+  #   - mount-observe
+  #   - network
+  #   - network-bind
+  #   - opengl
+  #   - pulseaudio
+  #   - removable-media
+  #   - wayland
+  #   - x11
 
   cnc:
-    command: desktop-launch $SNAP/usr/bin/mono-sgen $SNAP/usr/local/lib/openra/OpenRA.Game.exe Game.Mod=cnc
+    command: desktop-launch $SNAP/usr/local/bin/openra-cnc
     desktop: usr/local/share/applications/openra-cnc.desktop
     plugs:
     - desktop
@@ -44,7 +44,7 @@ apps:
     - x11
 
   d2k:
-    command: desktop-launch $SNAP/usr/bin/mono-sgen $SNAP/usr/local/lib/openra/OpenRA.Game.exe Game.Mod=d2k
+    command: desktop-launch $SNAP/usr/local/bin/openra-d2k
     desktop: usr/local/share/applications/openra-d2k.desktop
     plugs:
     - desktop
@@ -58,7 +58,7 @@ apps:
     - x11
 
   ra:
-    command: desktop-launch $SNAP/usr/bin/mono-sgen $SNAP/usr/local/lib/openra/OpenRA.Game.exe Game.Mod=ra
+    command: desktop-launch $SNAP/usr/local/bin/openra-ra
     desktop: usr/local/share/applications/openra-ra.desktop
     plugs:
     - desktop
@@ -93,6 +93,7 @@ parts:
     prepare: |
       sed -i 's|^Icon=\(.*\)$|Icon=${SNAP}/usr/local/share/icons/hicolor/128x128/apps/\1.png|' packaging/linux/openra.desktop.in
       sed -i 's|^Exec=|Exec=openra.{MOD}|' packaging/linux/openra.desktop.in
+      sed -i 's@\({BIN_DIR}\|{GAME_INSTALL_DIR}\)@$SNAP/\1@g' packaging/linux/openra.in
       env TRAVIS=1 make dependencies
     install: |
       make DESTDIR=$SNAPCRAFT_PART_INSTALL install
