unify prepare and install blocks into override-build

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -10,25 +10,16 @@ icon: icons/openra-ra.svg
 grade: stable
 confinement: strict
 
+architectures:
+- build-on: amd64
+- build-on: i386
+
 environment:
   MONO_CFG_DIR: $SNAP/etc
   MONO_CONFIG: $SNAP/etc/mono/config
   MONO_GAC_PREFIX: $SNAP/usr/lib/mono
 
 apps:
-  # openra:
-  #   command: desktop-launch $SNAP/usr/bin/mono-sgen $SNAP/usr/local/lib/openra/OpenRA.Game.exe
-  #   plugs:
-  #   - desktop
-  #   - mount-observe
-  #   - network
-  #   - network-bind
-  #   - opengl
-  #   - pulseaudio
-  #   - removable-media
-  #   - wayland
-  #   - x11
-
   cnc:
     command: desktop-launch $SNAP/usr/local/bin/openra-cnc
     desktop: usr/local/share/applications/openra-cnc.desktop
@@ -87,18 +78,26 @@ apps:
   #   - x11
 
 parts:
+  patches:
+    plugin: dump
+    source: patches
+    prime: [-*]
+
   openra:
+    after: [patches, desktop-glib-only]
     plugin: make
     source: https://github.com/OpenRA/OpenRA/archive/release-$SNAPCRAFT_PROJECT_VERSION.tar.gz
-    prepare: |
+    override-build: |
+      patch -Np1 < $SNAPCRAFT_STAGE/openra-armhf-lua.patch
       sed -i 's|^Icon=\(.*\)$|Icon=${SNAP}/usr/local/share/icons/hicolor/128x128/apps/\1.png|' packaging/linux/openra.desktop.in
       sed -i 's|^Exec=|Exec=openra.{MOD}|' packaging/linux/openra.desktop.in
       sed -i 's@\({BIN_DIR}\|{GAME_INSTALL_DIR}\)@$SNAP/\1@g' packaging/linux/openra.in
       env TRAVIS=1 make dependencies
-    install: |
+
+      snapcraftctl build
+
       make DESTDIR=$SNAPCRAFT_PART_INSTALL install
       make DESTDIR=$SNAPCRAFT_PART_INSTALL install-linux-shortcuts
-    after: [desktop-glib-only]
     build-packages:
     - curl
     - libfreetype6-dev
