--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,5 +1,5 @@
 name: openra
-version: '20180307'
+version: '20180923'
 summary: Libre/Free Real Time Strategy game engine supporting early Westwood classics
 description: >
   Open Source real-time strategy game engine for early Westwood games
@@ -81,17 +81,21 @@ parts:
   patches:
     plugin: dump
     source: patches
-    prime: [-*]
+    organize:
+      'mono-cert-import.sh': usr/bin/mono-cert-import
+    prime:
+      - -openra-armhf-lua.patch
 
   openra:
     after: [patches, desktop-glib-only]
     plugin: make
-    source: https://github.com/OpenRA/OpenRA/archive/release-$SNAPCRAFT_PROJECT_VERSION.tar.gz
+    source: https://github.com/OpenRA/OpenRA/releases/download/release-$SNAPCRAFT_PROJECT_VERSION/OpenRA-release-$SNAPCRAFT_PROJECT_VERSION-source.tar.bz2
     override-build: |
       patch -Np1 < $SNAPCRAFT_STAGE/openra-armhf-lua.patch
       sed -i 's|^Icon=\(.*\)$|Icon=${SNAP}/usr/local/share/icons/hicolor/128x128/apps/\1.png|' packaging/linux/openra.desktop.in
       sed -i 's|^Exec=|Exec=openra.{MOD}|' packaging/linux/openra.desktop.in
       sed -i 's@\({BIN_DIR}\|{GAME_INSTALL_DIR}\)@$SNAP/\1@g' packaging/linux/openra.in
+      sed -i '2imono-cert-import' packaging/linux/openra.in
       env TRAVIS=1 make dependencies
 
       snapcraftctl build
@@ -114,4 +118,5 @@ parts:
     - libsdl2-2.0-0
     - mono-complete
     - mount
+    - wget
     build-attributes: [no-system-libraries]
