--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -10,9 +10,11 @@ grade: stable
 confinement: strict
 base: core18
 
-architectures:
-- build-on: amd64
-- build-on: i386
+# architectures:
+# - build-on: amd64
+# - build-on: i386
+# - build-on: armhf
+# - build-on: arm64
 
 environment:
   MONO_CFG_DIR: $SNAP/etc
