Ensure libgl is staged
fixes #8

Signed-off-by: Daniel Llewellyn <daniel@bowlhat.net>

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -115,6 +115,7 @@ parts:
     build-packages:
     - curl
     - libfreetype6-dev
+    - libglu1-mesa-dev
     - liblua5.1-0-dev
     - libopenal-dev
     - libsdl2-dev
@@ -123,6 +124,7 @@ parts:
     - unzip
     stage-packages:
     - libfreetype6
+    - libglu1-mesa
     - liblua5.1-0
     - libopenal1
     - libsdl2-2.0-0
