Fix for buildservice changes
Add gnupg build-package to allow gpg to fetch the mono PGP key.

Signed-off-by: Daniel Llewellyn <daniel@bowlhat.net>

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -95,6 +95,7 @@ parts:
     source: https://github.com/ubuntu/snapcraft-desktop-helpers.git
     source-subdir: glib-only
     build-packages:
+      - gnupg
       - libglib2.0-dev
     stage-packages:
       - libglib2.0-bin
