--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -143,6 +143,6 @@ parts:
     - liblua5.1-0
     - libopenal1
     - libsdl2-2.0-0
-    - mono-complete
+    - mono-runtime
     - mount
     - wget
