--- a/.github/workflows/build-and-release.yaml
+++ b/.github/workflows/build-and-release.yaml
@@ -24,7 +24,7 @@ jobs:
           --platform "${{ matrix.architecture }}" \
           --output type=local,dest=$GITHUB_WORKSPACE .
 
-        echo ::set-output name=snap::$(find $GITHUB_WORKSPACE -type f -name "*.snap" | head -n1')
+        echo ::set-output name=snap::$(find $GITHUB_WORKSPACE -type f -name "*.snap" | head -n1)
     - uses: diddlesnaps/snapcraft-review-tools-action@v1
       with:
         snap: ${{ steps.build.outputs.snap }}
@@ -53,7 +53,7 @@ jobs:
           --platform "${{ matrix.architecture }}" \
           --output type=local,dest=$GITHUB_WORKSPACE .
 
-        echo ::set-output name=snap::$(find $GITHUB_WORKSPACE -type f -name "*.snap" | head -n1')
+        echo ::set-output name=snap::$(find $GITHUB_WORKSPACE -type f -name "*.snap" | head -n1)
     - uses: diddlesnaps/snapcraft-review-tools-action@v1
       with:
         snap: ${{ steps.build.outputs.snap }}
