--- a/.github/workflows/build-prs.yml
+++ b/.github/workflows/build-prs.yml
@@ -27,7 +27,7 @@ jobs:
           --platform "${{ matrix.architecture }}" \
           --output type=local,dest=$GITHUB_WORKSPACE
 
-        echo ::set-output name=snap::$(find $GITHUB_WORKSPACE -type f -name "*.snap" | head -n1')
+        echo ::set-output name=snap::$(find $GITHUB_WORKSPACE -type f -name "*.snap" | head -n1)
     - uses: diddlesnaps/snapcraft-review-tools-action@v1
       with:
         snap: ${{ steps.build.outputs.snap }}
