--- a/.github/workflows/test-pull-requests.yaml
+++ b/.github/workflows/test-pull-requests.yaml
@@ -8,8 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - run: |
-        echo PLAYTEST=false > build-type
+    - run: echo PLAYTEST=false > build-type
     - uses: jhenstridge/snapcraft-build-action@v1
       id: build
     - uses: diddlesnaps/snapcraft-review-tools-action@v1
