--- a/.github/workflows/build-prs.yml
+++ b/.github/workflows/build-prs.yml
@@ -20,13 +20,17 @@ jobs:
         - 'false'
     steps:
     - uses: actions/checkout@v2
-    - uses: crazy-max/ghaction-docker-buildx@v1
     - run: |
-        docker buildx build \
-          --build-arg PLAYTEST="${{ matrix.playtest }}" \
+        echo '{"experimental": true}' | sudo tee /etc/docker/daemon.json > /dev/null
+        sudo systemctl restart docker
+        docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
+        docker run --rm --tty --privileged \
+          --volume $GITHUB_WORKSPACE:$GITHUB_WORKSPACE \
+          --workdir $GITHUB_WORKSPACE \
           --platform "${{ matrix.architecture }}" \
-          --output type=local,dest=$GITHUB_WORKSPACE
-
+          --env PLAYTEST="${{ matrix.playtest }}" \
+          diddledan/snapcraft:core18
+        
         echo ::set-output name=snap::$(find $GITHUB_WORKSPACE -type f -name "*.snap" | head -n1)
     - uses: diddlesnaps/snapcraft-review-tools-action@v1
       with:
