--- a/.github/workflows/build-prs.yml
+++ b/.github/workflows/build-prs.yml
@@ -19,21 +19,23 @@ jobs:
         - 'true'
         - 'false'
     steps:
-    - uses: actions/checkout@v2
-    - run: |
+    - name: Checkout
+      uses: actions/checkout@v2
+    - name: Build
+      id: build
+      run: |
         echo '{"experimental": true}' | sudo tee /etc/docker/daemon.json > /dev/null
         sudo systemctl restart docker
         docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
         docker run --rm --tty --privileged \
-          --volume $GITHUB_WORKSPACE:$GITHUB_WORKSPACE \
-          --workdir $GITHUB_WORKSPACE \
+          --volume "$GITHUB_WORKSPACE":"$GITHUB_WORKSPACE" \
+          --workdir "$GITHUB_WORKSPACE" \
           --platform "${{ matrix.architecture }}" \
-          --env PLAYTEST="${{ matrix.playtest }}" \
-          diddledan/snapcraft:core18
+          diddledan/snapcraft:core18 env PLAYTEST="${{matrix.playtest}"} snap run snapcraft
         
-        echo ::set-output name=snap::$(find $GITHUB_WORKSPACE -maxdepth 1 -type f -name "*.snap" | head -n1)
-    - uses: diddlesnaps/snapcraft-review-tools-action@v1
+        echo ::set-output name=snap::"$(find "$GITHUB_WORKSPACE" -maxdepth 1 -type f -name "*.snap" | head -n1)"
+    - name: Review
+      uses: diddlesnaps/snapcraft-review-tools-action@v1
       with:
         snap: ${{ steps.build.outputs.snap }}
         isClassic: 'false'
-    - uses: snapcore/action-publish@v1
