--- a/.github/workflows/build-and-release.yaml
+++ b/.github/workflows/build-and-release.yaml
@@ -33,7 +33,9 @@ jobs:
           --platform "${{ matrix.architecture }}" \
           diddledan/snapcraft:core18 env PLAYTEST="${{ matrix.playtest }}" snap run snapcraft
         
-        echo ::set-output name=snap::"$(find "$GITHUB_WORKSPACE" -maxdepth 1 -type f -name "*.snap" | head -n1)"
+        SNAPFILE="$(find "$GITHUB_WORKSPACE" -maxdepth 1 -type f -name "*.snap" | head -n1)"
+        sudo chown "$(id -u)":"$(id -g)" "$SNAPFILE"
+        echo ::set-output name=snap::"$SNAPFILE"
     - name: Review
       uses: diddlesnaps/snapcraft-review-tools-action@v1
       with:
