--- a/.github/workflows/build-prs.yml
+++ b/.github/workflows/build-prs.yml
@@ -11,10 +11,10 @@ jobs:
     strategy:
       matrix:
         architecture:
-        - linux/amd64
-        - linux/386
-        - linux/arm64
-        - linux/arm/v7
+        - amd64
+        - i386
+        - arm64
+        - armhf
         playtest:
         - 'true'
         - 'false'
@@ -23,20 +23,13 @@ jobs:
       uses: actions/checkout@v2
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v1
+    - name: Set playtest=${{ matrix.playtest }}
+      run: echo 'PLAYTEST=${{ matrix.playtest }}' > build-type
     - name: Build
       id: build
-      run: |
-        echo '{"experimental": true}' | sudo tee /etc/docker/daemon.json > /dev/null
-        sudo systemctl restart docker
-        docker run --rm --tty --privileged \
-          --volume "$GITHUB_WORKSPACE":"$GITHUB_WORKSPACE" \
-          --workdir "$GITHUB_WORKSPACE" \
-          --platform "${{ matrix.architecture }}" \
-          diddledan/snapcraft:core18 env PLAYTEST="${{matrix.playtest}}" snapcraft
-
-          SNAPFILE="$(find "$GITHUB_WORKSPACE" -maxdepth 1 -type f -name "*.snap" | head -n1)"
-          sudo chown "$(id -u)":"$(id -g)" "$SNAPFILE"
-          echo ::set-output name=snap::"$SNAPFILE"
+      uses: diddlesnaps/snapcraft-multiarch-action@v1
+      with:
+        architecture: ${{ matrix.architecture }}
     - name: Review
       uses: diddlesnaps/snapcraft-review-tools-action@v1
       with:
