--- a/.github/workflows/release-check.yaml
+++ b/.github/workflows/release-check.yaml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@master
+    - uses: actions/checkout@v2
     - name: get-latest-version
       run: |
         VERSION="$(curl https://api.github.com/repos/OpenRA/OpenRA/releases | jq '.[0] | .tag_name' | sed -e 's/"//g')"
@@ -18,7 +18,7 @@ jobs:
         if [ "$last" != "$VERSION" ]; then
           echo "$(date -u --rfc-3339=seconds) Version $VERSION" >> .build.stamp
         fi
-    - uses: stefanzweifel/git-auto-commit-action@v2.1.0
+    - uses: stefanzweifel/git-auto-commit-action@v4
       with:
         commit_message: Trigger build for new version
         branch: master
