Update snapcraft.yaml and build-and-release action
* Ignore playtest build failures
* Fix build for recent openra releases

Signed-off-by: Daniel Llewellyn <diddledan@ubuntu.com>

--- a/.github/workflows/build-and-release.yaml
+++ b/.github/workflows/build-and-release.yaml
@@ -45,6 +45,7 @@ jobs:
     - name: Publish playtest to Edge
       uses: snapcore/action-publish@v1
       if: matrix.playtest == 'true'
+      continue-on-error: true
       with:
         store_login: ${{ secrets.STORE_LOGIN }}
         snap: ${{ steps.build.outputs.snap }}
