Update build-and-release workflow
* Move `continue-on-error` to cover the whole workflow.

Signed-off-by: Daniel Llewellyn <diddledan@ubuntu.com>

--- a/.github/workflows/build-and-release.yaml
+++ b/.github/workflows/build-and-release.yaml
@@ -16,15 +16,16 @@ jobs:
         - arm64
         - armhf
         playtest:
-        - 'true'
-        - 'false'
+        - true
+        - false
+    continue-on-error: ${{ matrix.playtest }}
     steps:
     - name: Checkout
       uses: actions/checkout@v2
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v1
     - name: Set playtest=${{ matrix.playtest }}
-      run: echo 'PLAYTEST=${{ matrix.playtest }}' > build-type
+      run: echo 'PLAYTEST="${{ matrix.playtest }}"' > build-type
     - name: Build
       id: build
       uses: diddlesnaps/snapcraft-multiarch-action@v1
@@ -45,7 +46,6 @@ jobs:
     - name: Publish playtest to Edge
       uses: snapcore/action-publish@v1
       if: matrix.playtest == 'true'
-      continue-on-error: true
       with:
         store_login: ${{ secrets.STORE_LOGIN }}
         snap: ${{ steps.build.outputs.snap }}
