Attempt fix for release being skipped
Signed-off-by: Daniel Llewellyn <diddledan@ubuntu.com>

--- a/.github/workflows/build-and-release.yaml
+++ b/.github/workflows/build-and-release.yaml
@@ -17,8 +17,8 @@ jobs:
         - arm64
         - armhf
         playtest:
-        - true
-        - false
+        - 'true'
+        - 'false'
     continue-on-error: ${{ matrix.playtest }}
     steps:
     - name: Checkout
